--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,22 +1,67 @@
 ---
-layout: default
+title: "Splash Page"
+layout: splash
+permalink: /splash-page/
+date: 2020-04-08
+header:
+  overlay_color: "#000"
+  overlay_filter: "0.5"
+  overlay_image: /assets/splash/coffee.jpeg
+
+  actions:
+    - label: "Download"
+      url: "https://github.com/mmistakes/minimal-mistakes/"
+excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop."
+intro: 
+  - excerpt: 'Nullam suscipit et nam, tellus velit pellentesque at malesuada, enim eaque. Quis nulla, netus tempor in diam gravida tincidunt, *proin faucibus* voluptate felis id sollicitudin. Centered with `type="center"`'
+feature_row:
+  - image_path: /assets/splash/feat1-1.jpg
+    title: "Placeholder 1"
+    excerpt: "Sample text 1 with **markdown** formatting."
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+  - image_path: /assets/splash/feat1-2.jpg
+    title: "Placeholder 2"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--secondary"
+  - image_path: /assets/splash/feat1-3.jpg
+    title: "Placeholder 3"
+    excerpt: "This is some sample content that goes here with **Markdown** formatting."
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--success"
+feature_row_left:
+  - image_path: /assets/splash/feat1-1.jpg
+    title: "Left aligned placeholder 1"
+    excerpt: "Left-aligned image centered with"
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+feature_row_right:
+  - image_path: /assets/splash/feat1-2.jpg
+    title: "Placeholder 1"
+    excerpt: "Right-aligned image with ``"
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
+feature_row_center:
+  - image_path: /assets/splash/feat1-3.jpg
+    title: "Placeholder 1"
+    excerpt: "Center aligned image"
+    url: "#test-link"
+    btn_label: "Read More"
+    btn_class: "btn--primary"
 ---
 
-{% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
-  {% include page__hero.html %}
-{% elsif page.header.video.id and page.header.video.provider %}
-  {% include page__hero_video.html %}
-{% endif %}
+{% include feature_row id="intro" type="center" %}
 
-<div id="main" role="main">
-  <article class="splash" itemscope itemtype="https://schema.org/CreativeWork">
-    {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
-    {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
-    {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date_to_xmlschema }}">{% endif %}
-    {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date_to_xmlschema }}">{% endif %}
+{% include feature_row %}
 
-    <section class="page__content" itemprop="text">
-      {{ content }}
-    </section>
-  </article>
-</div>
+{% include feature_row id="feature_row_left" type="left" %}
+
+{% include feature_row id="feature_row_center" type="right" %}
+
+{% include feature_row id="feature_row_center" type="center" %}
